# actris

./: .gitignore  .gitlab-ci.yml  CPP21.md  LICENSE  README.md  _CoqProject  coq-actris.opam  flake.nix  opam
actris/examples/: equivalence.v  list_rev.v  rpc.v  sort.v  sort_fg.v  swap_mapper.v
actris/logrel/: contexts.v  napp.v  session_typing_rules.v
actris/utils/: cofe_solver_2.v  compare.v  group.v  llist.v
experimental/: flist.v  producer_consumer.v
miniactris/: base.v  close.v  imp.v  send_close.v  session.v  sub.v  sym_close.v
multi_actris/channel/: channel.v  matrix.v  proofmode.v  proto.v  proto_alt.v  proto_consistency_examples.v  proto_model.v
multi_actris/examples/: basics.v  leader_election.v  leader_election_del.v  leader_election_del_alt.v  mpc.v  three_buyer.v  two_buyer.v
multi_actris/utils/: matrix.v
papers/: CONCUR20.md  CPP21.md  LMCS.md  POPL20.md
theories/: auth_excl.v  buffer.v  channel.v  encodable.v  encodings_examples.v  examples.v  examples_encoding_proofs.v  examples_proofs.v  list.v  llist.v  logrel.v  proto_channel.v  proto_model.v  typing.v
theories/channel/: branching.v  channel.v  channel_closure.v  exponentials.v  ltype.v  ltype_model.v  multi_channel.v  multi_proofmode.v  multi_proto.v  multi_proto_consistency_examples.v  multi_proto_model.v  notes  proofmode.v  proto.v  proto2.v  proto3.v  proto_channel.v  proto_model.v  session_escrow.v  step_proto.v  step_update.v
theories/encodings/: auth_excl.v  branching.v  channel.v  encodable.v  list.v  side.v  stype.v  stype_def.v  stype_enc.v
theories/examples/: basics.v  branching_examples.v  branching_proofs.v  encoding_proofs.v  equivalence.v  examples.v  ill.v  list_rev.v  list_sort.v  list_sort_elem.v  loop_sort.v  map.v  (+21 more)
(+66 files in other folders)
