opam-version: "2.0"
maintainer: "Robbert Krebbers"
synopsis: "Actris: Session protocol reasoning in Iris"
homepage: "https://gitlab.mpi-sws.org/iris/actris"
authors: "Jonas Kastberg Hinrichsen, Daniël Louwrink, Jesper Bengtson, Robbert Krebbers"
license: "BSD-3-Clause"
bug-reports: "https://gitlab.mpi-sws.org/iris/actris/issues"
dev-repo: "git+https://gitlab.mpi-sws.org/iris/actris.git"

depends: [
  "coq-iris-heap-lang" { (= "dev.2022-05-16.1.1b5e1bc6") | (= "dev") }
]

build: [make "-j%{jobs}%"]
install: [make "install"]
